--- a/JPA1/src/main/resources/application.yml
+++ b/JPA1/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/jpashop
+    url: jdbc:h2:~/jpashop
     username: sa
     password:
     driver-class-name: org.h2.Driver
@@ -15,5 +15,5 @@ spring:
 logging:
   level:
     org.hibernate.SQL: debug
-    # org.hibernate.type: trace # 스프링 부트 2.x, hibernate5
+    org.hibernate.type: trace # 스프링 부트 2.x, hibernate5
     # org.hibernate.orm.jdbc.bind: trace # 스프링 부트 3.x, hibernate6
