240708_레이아웃 설계 및 필요한 controller 작성 중

--- a/JPA1/build.gradle
+++ b/JPA1/build.gradle
@@ -31,12 +31,17 @@ dependencies {
 
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	
+	tasks.withType(JavaCompile) {
+    options.compilerArgs << '-parameters'
+}
 	//JUnit4 추가
 	testImplementation("org.junit.vintage:junit-vintage-engine") {
 		exclude group: "org.hamcrest", module: "hamcrest-core"
 	}
 
 }
+
 
 test {
     useJUnitPlatform()
