240714_회원 수정 API Controller 작성

--- a/JPA1/src/main/resources/application.properties
+++ b/JPA1/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
 # JPA 설정
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 
 # 로깅 설정
