240715_회원 조회 API, API 개발 고급 - 준비

--- a/JPA1/src/main/resources/application.properties
+++ b/JPA1/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
 # JPA 설정
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 
 # 로깅 설정
@@ -28,7 +28,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 #    driver-class-name: org.h2.Driver
 #  jpa:
 #    hibernate:
-#      ddl-auto: create
+#      ddl-auto: create # / none
 #    properties:
 #      hibernate:
 #        # show_sql: true
