--- a/JPA1/src/main/resources/application.properties
+++ b/JPA1/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 # JPA 설정
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
 
 # 로깅 설정
 logging.level.org.hibernate.SQL=debug
