--- a/JPA1/src/main/resources/application.properties
+++ b/JPA1/src/main/resources/application.properties
@@ -7,9 +7,10 @@ spring.datasource.driver-class-name=org.h2.Driver
 # JPA 설정
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.default_batch_fetch_size: 1000
 spring.jpa.show-sql=true
 
-# 로깅 설정
+# 로깅 설정X
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type=trace
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
@@ -34,6 +35,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 #      hibernate:
 #        # show_sql: true
 #        format_sql: true
+#      	 default_batch_fetch_size: 1000
 #
 #logging:
 #  level:
